k8s/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlops
  labels:
    project: telco-churn
    managed-by: kubectl
