k8s/k8s/base/ml-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: churn-ml-svc
  namespace: mlops
  labels:
    app: churn-ml
    component: inference
spec:
  selector:
    app: churn-ml
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
